# minigrep

./: Cargo.toml  hello.txt  readme.md
src/: lib.rs  main.rs
